// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseMenuItem> Active story renders snapshot 1`] = `
<a
  className="dropdown-item active"
  href="#"
  onClick={[Function]}
>
  This is an active base menu item
</a>
`;

exports[`<BaseMenuItem> Default story renders snapshot 1`] = `
<a
  className="dropdown-item"
  href="#"
  onClick={[Function]}
>
  This is a base menu item
</a>
`;

exports[`<BaseMenuItem> Disabled story renders snapshot 1`] = `
<a
  className="dropdown-item disabled"
  href="#"
  onClick={[Function]}
>
  This is a disabled base menu item
</a>
`;

exports[`<MenuItem> Default story renders snapshot 1`] = `
<a
  aria-label="test label"
  aria-selected={false}
  className="dropdown-item"
  href="#"
  id="test-id-item-0"
  onClick={[Function]}
  onMouseDown={[Function]}
  role="option"
>
  This is a menu item
</a>
`;
